@@ -1,0 +1,28 @@
+QA output created by 788
+Waiting for pmcd to terminate ...
+
+=== nginx agent installation ===
+You will need to choose an appropriate configuration for installation of
+the "nginx" Performance Metrics Domain Agent (PMDA).
+
+  collector	collect performance statistics on this system
+  monitor	allow this system to monitor local and/or remote systems
+  both		collector and monitor configuration for this system
+
+Please enter c(ollector) or m(onitor) or b(oth) [b] Updating the Performance Metrics Name Space (PMNS) ...
+Terminate PMDA if already installed ...
+[...install files, make output...]
+Updating the PMCD control file, and notifying PMCD ...
+Starting pmcd ... 
+Starting pmlogger ... 
+Check nginx metrics have appeared ... X metrics and Y values
+
+=== remove nginx agent ===
+Culling the Performance Metrics Name Space ...
+nginx ... done
+Updating the PMCD control file, and notifying PMCD ...
+[...removing files...]
+Check nginx metrics have gone away ... OK
+Waiting for pmcd to terminate ...
+Starting pmcd ... 
+Starting pmlogger ... 
